--- a/pages/entrar/login.html
+++ b/pages/entrar/login.html
@@ -27,23 +27,21 @@
             </a>
             <h1>Faça seu Login</h1>
 
-            <form id="form">
+            <form id="form" method="POST" action="../alunos/alunos.html">
                 <div class="input-field">
                     <i class="material-icons prefix">account_circle</i>
-                    <input id="icon_prefix" type="email" class="validate">
+                    <input name="email" id="email" type="email" data-error=".errorTxt1">
                     <label for="icon_prefix">E-mail</label>
+                    <div class="errorTxt1 right-align"></div>
                 </div>
                 <div class="input-field">
                     <i class="material-icons prefix">lock_outline</i>
-                    <input id="senha" type="password" class="validate">
+                    <input name="senha" id="senha" type="password" data-error=".errorTxt2">
                     <label for="senha">Senha</label>
+                    <div class="errorTxt2 right-align"></div>
                 </div>
                 <div class="input-field">
-                    <a href="../alunos/alunos.html">
-                        <span class="btn waves-effect waves-light">
-                            <i class="material-icons">lock_open</i> LOGIN
-                        </span>
-                    </a>
+                    <button id="btn" class="btn waves-effect waves-light right submit" type="submit" name="action">Entrar</button>
                 </div>
             </form>
 
@@ -65,6 +63,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="../../js/loader.js"></script>
+
+    <!-- Validar form -->
+    <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
+    <script src="../../js/messages_pt_BR.js"></script>
+    <script src="../../js/formLogin.js"></script>
 </body>
 
 </html>
