Alterando validações forms

--- a/pages/EditarAluno/editarAluno.html
+++ b/pages/EditarAluno/editarAluno.html
@@ -26,7 +26,7 @@
             </div>
 
             <div class="col s12 m12 l6">
-                <form id="form">
+                <form id="form" id="form" method="POST" action="../alunos/alunos.html">
                     <div class="input-field">
                         <i class="material-icons prefix">account_circle</i>
                         <input name="name" id="name" type="text" data-error=".errorTxt1">
@@ -80,6 +80,7 @@
 
     <!-- Validar form -->
     <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/additional-methods.min.js"></script>
     <script src="../../js/messages_pt_BR.js"></script>
     <script src="../../js/formEditarAluno.js"></script>
 
